メンバー一覧画面を追加し、ハンバーガーメニューからアクセスできる場所をこちらに変更。メンバー一覧画面のAddボタンでメンバー登録画面に遷移

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="title_register">アカウント作成</string>
     <string name="title_logout">ログアウト</string>
     <string name="title_login">ログイン</string>
+    <string name="title_member_list">メンバー</string>
+    <string name="title_member_regist">メンバー登録</string>
 
     <!--    ボタン名-->
     <string name="button_login">ログイン</string>
