メンバー登録画面に入力フォームを設置

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,11 +11,13 @@
     <string name="button_login">ログイン</string>
     <string name="button_signup">アカウント作成</string>
     <string name="button_register">アカウント登録</string>
+    <string name="button_member_regist">メンバー登録</string>
 
     <!--    ヒント-->
     <string name="hint_password">パスワード</string>
     <string name="hint_email">メールアドレス</string>
     <string name="hint_username">ユーザー名</string>
+    <string name="hint_member_name">メンバー名</string>
 
 
     <!--    エラーメッセージ-->
