--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="error_email">正しいメールアドレス形式で入力してください</string>
 
     <!--    メニューバー-->
+    <string name="title_home">ホーム</string>
     <string name="open">開く</string>
     <string name="close">閉じる</string>
 </resources>
