--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="title_login">ログイン</string>
     <string name="title_member_list">メンバー</string>
     <string name="title_member_add">メンバー登録</string>
+    <string name="title_add_pay_record">出費登録</string>
 
     <!--    ボタン名-->
     <string name="button_login">ログイン</string>
@@ -14,13 +15,14 @@
     <string name="button_member_regist">メンバー登録</string>
     <string name="button_member_update">更新</string>
     <string name="button_member_delete">削除</string>
+    <string name="button_pay_record_add">出費登録</string>
 
     <!--    ヒント-->
     <string name="hint_password">パスワード</string>
     <string name="hint_email">メールアドレス</string>
     <string name="hint_username">ユーザー名</string>
     <string name="hint_member_name">メンバー名</string>
-
+    <string name="hint_pay_amount">金額</string>
 
     <!--    エラーメッセージ-->
     <string name="error_empty">入力必須です</string>
@@ -31,4 +33,17 @@
     <string name="menu_title_hamburger">ハンバーガー</string>
     <string name="open">開く</string>
     <string name="close">閉じる</string>
+
+    <!--    勘定科目リスト-->
+    <string-array name="pay_list">
+        <item>支払い目的を選択してください</item>
+        <item>食費日用雑貨</item>
+        <item>医療費</item>
+        <item>酒</item>
+        <item>床屋</item>
+        <item>交通費</item>
+        <item>控え</item>
+        <item>和賀子</item>
+        <item>宗俊</item>
+    </string-array>
 </resources>
