--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,11 +23,15 @@
     <string name="hint_username">ユーザー名</string>
     <string name="hint_member_name">メンバー名</string>
     <string name="hint_pay_amount">金額</string>
+    <string name="hint_pay_date">支払日を選択してください</string>
 
     <!--    エラーメッセージ-->
     <string name="error_empty">入力必須です</string>
     <string name="error_digit_6">6桁以上で入力して下さい</string>
     <string name="error_email">正しいメールアドレス形式で入力してください</string>
+    <string name="error_number_format">半角数字で入力して下さい</string>
+    <string name="error_range_pay_amount">1~1,000,000の間で入力してください</string>
+    <string name="error_range_pay_date">1900年1月1日から2050年12月31日の間で選択してください</string>
 
     <!--    メニューバー-->
     <string name="menu_title_hamburger">ハンバーガー</string>
@@ -46,4 +50,7 @@
         <item>和賀子</item>
         <item>宗俊</item>
     </string-array>
+
+    <!--    チェックボックスメッセージ-->
+    <string name="check_pay_done">領収しました</string>
 </resources>
