支払い明細の削除機能を追加・更新画面への遷移機能の追加

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="title_add_pay_record">支払い登録</string>
     <string name="title_pay_record_list">家計簿</string>
     <string name="title_detail_pay_record">支払い明細</string>
+    <string name="title_update_pay_record">支払い明細更新</string>
 
 
     <!--    ボタン名-->
