--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="title_pay_record_list">家計簿</string>
     <string name="title_detail_pay_record">支払い明細</string>
     <string name="title_update_pay_record">支払い明細更新</string>
+    <string name="title_secession">退会</string>
 
 
     <!--    ボタン名-->
@@ -21,6 +22,8 @@
     <string name="button_member_delete">削除</string>
     <string name="button_pay_record_add">登録</string>
     <string name="button_pay_record_update">更新</string>
+    <string name="button_secession_ok">はい</string>
+    <string name="button_secession_ng">いいえ</string>
 
     <!--    ヒント-->
     <string name="hint_password">パスワード</string>
@@ -67,4 +70,8 @@
     <string name="pay_done_check">領収状態：</string>
     <string name="pay_note">備考：</string>
 
+    <!--    退会画面-->
+    <string name="explain">退会手続きを実行します。</string>
+    <string name="explain_warning">下記のボタンを押すと退会手続きを実行します。</string>
+    <string name="final_check">お客様の情報はすべて削除されますがよろしいですか？</string>
 </resources>
