--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="title_pay_purpose_add">支払い目的の登録</string>
     <string name="title_pay_purpose_update">支払い目的の更新</string>
     <string name="title_pay_purpose_list">支払い目的一覧</string>
+    <string name="title_logout">ログアウト</string>
 
 
     <!--    ボタン名-->
