家計簿の登録とリストビューへの表示

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="title_pay_record_list">支払い履歴</string>
     <string name="title_detail_pay_record">支払い明細</string>
     <string name="title_update_pay_record">支払い明細更新</string>
+    <string name="title_balance_list">家計簿の履歴</string>
+    <string name="title_balance_detail">家計簿</string>
     <string name="title_secession">退会</string>
     <string name="title_pay_purpose_add">支払い目的の登録</string>
     <string name="title_pay_purpose_update">支払い目的の更新</string>
