ライセンスの一覧表示とアカウント削除処理の修正

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="title_pay_purpose_update">支払い目的の更新</string>
     <string name="title_pay_purpose_list">支払い目的一覧</string>
     <string name="title_logout">ログアウト</string>
+    <string name="title_license">ライセンス</string>
 
 
     <!--    ボタン名-->
